@@ -22,8 +22,6 @@
  * $Header$
  */
 
-#define _GNU_SOURCE
-
 #include <errno.h>
 #include <string.h>
 #include <stddef.h>
