@@ -240,6 +240,7 @@ char *memrepchr(char **str, char old, char _new, size_t size);
 /* Concat two paths adding '/' if needed.  Memory will be allocated
  * with the malloc() call. */
 char *strcatpaths(const char *pathname1, const char *pathname2);
+char *strndup(const char *str, size_t size);
 
 /* The following functions do not care about errors - they only return
  * 1 if 'pathname' exist, and is the type requested, or else 0.
