@@ -2,6 +2,16 @@
 # Copyright 1999-2005 Gentoo Foundation; Distributed under the GPLv2
 # $Header$
 
+  17 Feb 2005; Martin Schlemmer <azarah@gentoo.org>:
+
+    misc.c, misc.h: Add strndup() instead of relying on glibc's implementation
+                    (should fix some issues on bsd and darwin).
+    depend.c, simple-regex.c: Do not define _GNU_SOURCE, but rather use our
+                              strndup() from misc.h.
+    parse.c: Do not define _GNU_SOURCE, but rather use our strndup() from
+             misc.h.  Also change all usage of basename() to conform to POSIX,
+             and not use the GNU variants.
+
   16 Feb 2005; Martin Schlemmer <azarah@gentoo.org>:
 
     depscan.c: Add uid check and quit if user is not root.
